test/asm/string-literal-macro-arg.err
error: string-literal-macro-arg.asm(6):
    Illegal character escape 'w'
error: string-literal-macro-arg.asm(11):
    Illegal character escape at end of input
error: string-literal-macro-arg.asm(11):
    Unterminated string
error: string-literal-macro-arg.asm(11) -> string-literal-macro-arg.asm::mac(4):
    Unterminated string
Assembly aborted with 4 errors!
